# mlist

./: .dockerignore  Dockerfile  README.md  justfile
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  config.toml
backend/src/: auth.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  path_guard.rs  session.rs
backend/src/db/: admin.rs  file_states.rs  helpers.rs  mod.rs  resource_access.rs  tests.rs  types.rs  users.rs
backend/src/handlers/: admin.rs  auth.rs  favorites.rs  files.rs  helpers.rs  http_util.rs  mod.rs  tests.rs  types.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: EntriesTable.tsx  EntryIcon.tsx  FilePreview.tsx  FormError.tsx  PathBreadcrumbs.tsx  TopBar.tsx  TotpBindingPanel.tsx  TotpCodeInput.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/hooks/: useRemoteTextContent.ts
frontend/src/lib/: fileTypes.ts  format.ts  path.ts  totp.ts
frontend/src/views/: AdminView.tsx  AuditView.tsx  BootstrapView.tsx  LoginView.tsx
