[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
http = "1.2.0"
mime_guess = "2.0.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.15.1", features = ["v4"] }
time = { version = "0.3.37", features = ["formatting"] }
